--- a/docs/newcoder/数组中重复的数字.md
+++ b/docs/newcoder/数组中重复的数字.md
@@ -1,10 +1,10 @@
-数组中重复的数字
+### 数组中重复的数字
 
-solution1
+[牛客网](href="https://www.nowcoder.com/practice/623a5ac0ea5b4e5f95552655361ae0a8?tpId=13&tqId=11203&tPage=1&rp=1&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking&from=cyc_github")
 
-思路：思路比较另类，遍历数组，将值为i的与nums[i] 的值进行比较，如果相同，直接print，不同则swap交换位置，然后依次遍历。
+#### solution1
 
-这里有一个细节，很容易漏掉:while(nums[i] != i) 判断value=i 的不在i位置,没有这个while，if就会对nums[1]=1 这种条件失效
+> 思路：思路比较另类，遍历数组，将值为i的与nums[i] 的值进行比较，如果相同，直接print，不同则swap交换位置，然后依次遍历。这里有一个细节，很容易漏掉:while(nums[i] != i) 判断value=i 的不在i位置,没有这个while，if就会对nums[1]=1 这种条件失效
 
 ```java 
 public boolean duplicate(int[] nums, int length, int[] duplication) {
@@ -35,11 +35,9 @@ public boolean duplicate(int[] nums, int length, int[] duplication) {
 
 
 
-solution2
+#### solution2
 
-思路：遍历，判断集合中是否有该数字，有则print，没有就list.add()
-
-> 思路简单，但是不是最优解，需要创建一个list集合，空间消耗比solution1多，而且每次都需要list.contains这个操作也是比较耗时的，效率不高，具体可以查看contains底层源码。
+> 思路：遍历，判断集合中是否有该数字，有则print，没有就list.add().思路简单，但是不是最优解，需要创建一个list集合，空间消耗比solution1多，而且每次都需要list.contains这个操作也是比较耗时的，效率不高，具体可以查看contains底层源码。
 
 ```java 
 public int dupSolutionReturnInt(int[] nums) {
