--- a/docs/项目实战/前后端整合/前后端分离项目实战总结.md
+++ b/docs/项目实战/前后端整合/前后端分离项目实战总结.md
@@ -2,6 +2,8 @@
 
 #### 注意前后端定义实体类型的时候 字段必须要一致，如不一致，以后端为准
 
+#### 代码写的像坨，自己都看不下去，还是非常有重构的不要
+
 > 一般前端定义的是VO(VIew Object)对象，后端有DTO(Data Transfer)，PO(Persisent Object)
 >
 > VO 跟 PO 的字段有很大可能性不一样，这个时候就需要使用DTO对象去转换，
@@ -29,6 +31,8 @@
 ####  还有一很重要的一点
 
 > 就是用到哪个变量再去定义，不要事先定义一大堆，然后尽量优化代码，减少变量的定义，增强代码的健壮性(多做一些校验)
+
+
 
 
 
