--- a/docs/技术栈/Java/集合/集合.md
+++ b/docs/技术栈/Java/集合/集合.md
@@ -2,11 +2,19 @@
 
 ### List
 
+list集合是是
+
 #### ArrayList
 
 ##### 底层数据结构
 
-> 
+> 底层数据结构是数组，所以ArrayList的特性就是查询效率相对较高，增删效率较低。
+
+
+
+##### 使用场景
+
+
 
 
 
@@ -14,7 +22,15 @@
 
 ##### 底层数据结构
 
-> 
+> 底层数据结构是链表，所以LinkedList的特性就是查询效率相对较低，增删效率较低。
+
+
+
+##### 使用场景
+
+
+
+
 
 ##### ArrayList 与 LinkedList的区别
 
@@ -26,6 +42,8 @@
 
 ### Set
 
+
+
 #### HashSet
 
 
@@ -34,7 +52,13 @@
 
 
 
+#### LinkedHashSet
 
+
+
+
+
+##### ArrayList 与 LinkedList 的区别
 
 
 
@@ -49,6 +73,22 @@
 #### HashTable
 
 
+
+#### ConcurrentHashMap
+
+
+
+
+
+##### HashMap 与 HashTable 的区别
+
+
+
+##### HashMap  与 ConcurrentHashMap 的区别
+
+
+
+#### 
 
 
 
