--- a/docs/技术栈/Java/数据结构/树.md
+++ b/docs/技术栈/Java/数据结构/树.md
@@ -31,3 +31,28 @@
 红黑树 自平衡的判断就是 左右子树的黑节点一样多
 
 [红黑树简书](https://www.jianshu.com/p/e136ec79235c)
+
+
+
+[B+树增删解析](https://www.cnblogs.com/nullzx/p/8729425.html)
+
+### B 树
+
+B树是一个搜索树，不同于搜索二叉树的是，B树可以有多个子节点，B树在每个节点上都存储了数据(节点中包含 key 和 value)，通过key定位，然后查找指定的value。
+
+
+
+
+
+### B+树
+
+在B树的基础上进行优化，所有的数据只有在叶子节点中才有，其他的节点存储的都是索引值，这样做有一个好处，同样的内存空间，B+树能存储更多的数据，
+
+#### 特点
+
+叶子节点数量 等于 索引值个数
+
+
+
+
+
