--- a/docs/技术栈/Java/集合/集合.md
+++ b/docs/技术栈/Java/集合/集合.md
@@ -36,6 +36,14 @@ list集合是是
 
 
 
+#### Arrays 工具类
+
+Arrays.asList() 将数组转换成 List 类型的集合(这个地方有一个坑)
+
+如果你对生成的list集合进行add/remove/clear 操作会抛出 java.lang.UnsupportedOperationException
+
+原因： 你将数组转换成集合，但是其实底层的数据结构还是数组，在阿里巴巴Java开发文档中有相应的讲解
+
 
 
 
