--- a/docs/Java/汇总.md
+++ b/docs/Java/汇总.md
@@ -1,34 +1,46 @@
-SE
+SE   JDK    concurrent包  collection包
 
 集合
 
-线程
+多线程
+
+
 
 IO
 
 NIO
 
+socket
+
+SimpleDateFormat
+
+JVM
+
 
 
 EE
 
-js
+js  jQuery  Vue  bootstrap
 
-mysql、oracle
+mysql、oracle、mongoDB、SQLServer
 
-spring
+spring   IOC/DI(容器)  AOP
 
-springmvc
+springmvc、struct2
 
-mybatis
+mybatis、Hibernate
 
 springboot
 
-springcloud
+
 
 
 
 中间件
+
+Spring Cloud  Eureka Feign ribbon hystris
+
+Spring Cloud Alibaba  Nacos 
 
 redis
 
