--- a/docs/技术栈/算法/小灰的算法之旅/小灰的算法之旅.md
+++ b/docs/技术栈/算法/小灰的算法之旅/小灰的算法之旅.md
@@ -1,5 +1,7 @@
 # 小灰的算法之旅 (algorithm)
 
+**实战代码都在Druid 的 test.algorithm目录下**
+
 ## 算法概述
 
 ### 概念
@@ -234,11 +236,17 @@ class Node {
 
 > 两个集合 
 >
->   OpenList 可达到的格子
+>   OpenList  当前格子可达到的格子(只能走一格，上下左右四个方位)
 >
->   CloseList  已达到的格子
+>   CloseList  当前路径已达到的格子
 >
 > 一个公式
 >
 >   F = G + H
+>
+>   G ： 从起点走到当前格子的成本，也就是已经花费了多少步
+>
+>   H  :   在不考虑障碍的情况下，从当前格子走到目标格子的距离，也就是离目标格子还有多远
+>
+>   F   :  就是起点到达当前格子，然后当前格子到目标的总步数。
 
