--- a/docs/interviewnotes/2020.12.5苏州总结.md
+++ b/docs/interviewnotes/2020.12.5苏州总结.md
@@ -16,6 +16,8 @@
 >
 > sql优化
 >
+> 联合索引 (有 a,b,c三个字段组成的联合索引，查询的时候使用到a,b 这个时候索引失效了么？)
+>
 > 多表查询
 >
 > 手写单例模式  懒汉 饿汉 double-check
@@ -151,9 +153,121 @@ private void grow(int minCapacity) {
         if (newCapacity - MAX_ARRAY_SIZE > 0)
             newCapacity = hugeCapacity(minCapacity);
         // minCapacity is usually close to size, so this is a win:
-        elementData = Arrays.copyOf(elementData, newCapacity);
+        elementData = Arrays.copyOf(elementData, newCapacity); // copyOf(), 将旧的
+    }
+public boolean contains(Object o) { // 判断是否包含某个元素，最直接的用法是将list里面的元素存入set集合
+        return indexOf(o) >= 0;
+    }
+public int indexOf(Object o) {
+        if (o == null) {
+            for (int i = 0; i < size; i++)
+                if (elementData[i]==null)
+                    return i;
+        } else {
+            for (int i = 0; i < size; i++)
+                if (o.equals(elementData[i]))
+                    return i;
+        }
+        return -1;
     }
 ```
 
 
 
+#### Synchronized 
+
+
+
+
+
+#### SQL优化
+
+##### 建立索引  提高检索速度
+
+> 经常出现在where group by ，通俗的说就是经常被查询的字段建议使用索引。(最好是id等重复率低的) 性别 地址不建议使用索引
+>
+> 数据量大的表建议使用
+>
+> 字段中包含大量null的字段不建议使用索引
+>
+> 经常 update  delete 的表不建议使用
+
+
+
+##### SQL 语句
+
+> 避免使用 * ，要什么字段就查什么
+>
+> from子句里面的表尽量放数据量比较小的,join on 连接数据量大的表
+>
+> like 时注意 避免把 % 放在最前面
+
+
+
+#### 联合索引
+
+https://www.cnblogs.com/softidea/p/5977860.html
+
+> 联合索引又叫复合索引，Mysql从左到右的使用索引中的字段，一个查询可以只使用索引中的一部 分但是只能是最左侧部分。例如索引是key index(a,b,c),可以支持  a | a,b |a,b,c  三种组合进行查询，但不支持b,c 进行查询。
+
+
+
+#### 单例模式
+
+**单例模式，就是只有一个实例，并且它对自己负责创建自己的对象，这个类提供了一种访问其唯一的对象的方式，可以直接访问，不需要实例化该类的对象**
+
+##### 懒汉式
+
+```java
+public class SingletonLazy {
+    private SingletonLazy singletonLazy = null;
+    public SingletonLazy() {
+    }
+    public SingletonLazy getInstance() {
+        return new SingletonLazy();
+    }
+}
+```
+
+##### 饿汉式
+
+```java
+public class SingletonHangury {
+    private SingletonHangury singletonHangury = new SingletonHangury();
+    public SingletonHangury() {
+    }
+    public SingletonHangury getInstance() {
+        return this.singletonHangury;
+    }
+}
+```
+
+##### double-check
+
+```java
+public class SingletonLazySynchronizedPro {
+    private volatile SingletonLazySynchronizedPro singletonLazySynchronizedPro;
+    public SingletonLazySynchronizedPro() {
+    }
+    public SingletonLazySynchronizedPro getInstance() {
+        if(this.singletonLazySynchronizedPro == null) {
+            synchronized (SingletonLazySynchronizedPro.class) {
+                if(this.singletonLazySynchronizedPro == null) {
+                    this.singletonLazySynchronizedPro = new SingletonLazySynchronizedPro();
+                }
+            }
+        }
+        return this.singletonLazySynchronizedPro;
+    }
+}
+```
+
+
+
+
+
+
+
+#### SprigBoot  Bean生命周期
+
+> 
