--- a/docs/interviewnotes/2020.12.5苏州总结.md
+++ b/docs/interviewnotes/2020.12.5苏州总结.md
@@ -264,10 +264,22 @@ public class SingletonLazySynchronizedPro {
 
 
 
-
-
-
-
 #### SprigBoot  Bean生命周期
 
-> 
+
+
+> Bean的定义
+>
+> Bean的初始化
+>
+> Bean的生存期
+>
+> Bean的销毁
+
+Bean的定义过程:
+
+1.第一步，资源定位，就是Spring根据我们定义的注解(@Component) ,找到相应的类。
+
+2.找到了资源就开始解析，并将定义的信息保存起来，此时，并没有初始化bean
+
+3.然后将bean的定义发布到SpringIOC容器中，此时，SpringIOC的容器中还没有Bean的生成。只是定义的信息。
