--- a/docs/技术栈/Java/数据结构/树.md
+++ b/docs/技术栈/Java/数据结构/树.md
@@ -1,6 +1,6 @@
 ## 树
 
-### 平衡二叉树
+### 自平衡二叉树
 
 又被称为AVL树(有区别于AVL算法),
 
@@ -31,6 +31,18 @@
 红黑树 自平衡的判断就是 左右子树的黑节点一样多
 
 [红黑树简书](https://www.jianshu.com/p/e136ec79235c)
+
+
+
+红黑树自平衡的三种操作：左旋、右旋、变色
+
+左旋：以某个节点作为支点(旋转节点)，其右子节点变为旋转节点的父节点，右子节点的左节点变为旋转节点的右子节点，左子节点结构保持不变
+
+右旋：以某个节点作为支点(旋转节点)，其左子节点变为旋转节点的父节点，左子节点的右节点变为旋转节点的左子节点，右子节点结构保持不变
+
+变色：节点颜色有红色变成黑色，黑色变成红色
+
+
 
 
 
