--- a/docs/技术栈/网络安全/服务器安全问题.md
+++ b/docs/技术栈/网络安全/服务器安全问题.md
@@ -1,6 +1,7 @@
 ## 安全问题
 
+### Redis 有一个漏洞
 
+[Redis漏洞攻击](https://www.cnblogs.com/0daybug/p/12389138.html)
 
-### 
-
+ Redis因配置不当可以未授权访问，很容易被攻击者恶意利用。如果Redis以root身份运行，黑客可以给root账户写入SSH公钥文件，直接通过SSH登录、控制服务器，引发重要数据泄露或丢失，严重威胁用户业务和数据安全，风险极高，业界将此漏洞定位为高危漏洞
